hphp/hack/test/typecheck/ellipsis_in_function_hint_strict.php
<?hh //strict

function foo((function(...): void) $fn): void {}
